--- a/JS/canvas-basic-animation/index.html
+++ b/JS/canvas-basic-animation/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canvas Resize</title>
+    <title>Canvas Basic Animation</title>
     <style>
         body{
             margin: 0 !important;
@@ -12,6 +12,6 @@
 </head>
 <body>
     <canvas></canvas>
-    <script src="main.js"></script>
+    <script src="canvas.js"></script>
 </body>
 </html>
