--- a/JS/canvas-gravity/index.html
+++ b/JS/canvas-gravity/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canvas Interactivity</title>
+    <title>Canvas Gravity</title>
     <style>
         body{
             margin: 0 !important;
@@ -12,6 +12,6 @@
 </head>
 <body>
     <canvas></canvas>
-    <script src="canvas.js"></script>
+    <script type="module" src="js/canvas.js"></script>
 </body>
 </html>
